REF: purify the User entity
